// Copyright (c) 2011 Nohros Inc. All rights reserved.
// Use of this source code is governed by a MIT-style license that can be
// found in the LICENSE file.
//
// Basic messages for general use.

//import "google/protobuf/csharp_options.proto";
//option (google.protobuf.csharp_file_options).namespace = "Nohros.Ruby";

option optimize_for = LITE_RUNTIME;

message KeyValuePair {
  required string key = 1;
  required string value = 2;  
}

message ExceptionMessage {
  // A number that uniquely identifies the exception within an service.
  optional sint64 code = 1;

  // The message that describes the current exception.
  optional string message = 2;
  
  // The name of the service or object that causes the exception.
  optional string source = 3;
  
  // A collection of key/value pairs that provide additional, user-defined
  // information about the exception.
  repeated KeyValuePair data = 4;
}